feat: array validation and display data

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,5 +1,7 @@
-<h1>Angular Tasks</h1>
-<ul>
-    <li><a routerLink="employee" routerLinkActive="active">Curd Task</a></li>
-    <li><a routerLink="/resumeForm/form" routerLinkActive="active"> Resume Builder</a></li>
-</ul>
+<div class="side-nav">
+    <h1>Angular Tasks</h1>
+    <ul>
+        <li><a routerLink="employee" routerLinkActive="active">Curd Task</a></li>
+        <li><a routerLink="resumeForm" routerLinkActive="active"> Resume Builder</a></li>
+    </ul>
+</div>
