--- a/src/app/modules/employee/components/employee-form/employee-form.component.html
+++ b/src/app/modules/employee/components/employee-form/employee-form.component.html
@@ -38,7 +38,7 @@
     <div class="space">
         <label for="age"> Age :- </label>
         <p>
-            <input type="text" name="age" id="age" formControlName="Age">
+            <input type="text" name="Age" id="age" formControlName="Age">
             <span *ngIf="Age && Age.invalid && Age.touched"> This Field is Invalid.</span>
         </p>
     </div>
