--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<app-sidebar></app-sidebar>
-<router-outlet></router-outlet>
+<div class="wrapper">
+    <!--side bar-->
+
+    <div class="side">
+        <app-sidebar></app-sidebar>
+    </div>
+
+    <div class="main">
+        <!-- main content-->
+        <router-outlet></router-outlet>
+    </div>
+
+</div>
