--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,23 @@
-:host{
+.wrapper{
     display: flex;
-    height: 100%;
+    flex-direction: row;
+    height: 100vh;
+    overflow: hidden;
+  
+    .side{
+    display: flex;
+    width: 300px;
+    height: 100vh; 
+    overflow: hidden;
+    }
+    .main{
+    display: flex;
+    flex-grow: 1;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    overflow: auto;
+   
+    }
 }
+
