--- a/src/app/modules/resume-builder/components/resume-form/resume-form.component.scss
+++ b/src/app/modules/resume-builder/components/resume-form/resume-form.component.scss
@@ -1,9 +1,14 @@
-:host{
-    margin: auto;
-}
 .main{
     border: 1px solid black;
-    padding: 50px;
+    padding: 10px;
+}
+
+.d-flex{
+    display: flex;
+    flex-direction: row;
+}
+.margin{
+    margin:20px;
 }
 .form-container{
     width: 50%;
@@ -11,12 +16,14 @@
 }
 
 .skillfield{
-    width: 30%;
+    width: 50%;
 }
 
 .expfield, .edufield{
     width: 80%;
     flex-wrap: wrap;
 }
+
+
 
 
