--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -3,5 +3,6 @@
     <ul>
         <li><a routerLink="employee" routerLinkActive="active">Curd Task</a></li>
         <li><a routerLink="resumeForm" routerLinkActive="active"> Resume Builder</a></li>
+        <li><a routerLink="user" routerLinkActive="active"> Assesment </a></li>
     </ul>
 </div>
