--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,23 +1,19 @@
 .wrapper{
     display: flex;
-    flex-direction: row;
-    height: 100vh;
+
+    height: 100%;
     overflow: hidden;
   
     .side{
-    display: flex;
-    width: 300px;
-    height: 100vh; 
-    overflow: hidden;
+        flex: 0 0 250px;
+    // width: 300px;
+    //overflow: hidden;
     }
     .main{
-    display: flex;
-    flex-grow: 1;
-    width: 100%;
-    height: 100vh;
-    justify-content: center;
-    overflow: auto;
-   
+      
+        border: 2px solid gold;
+        flex-grow: 1;
+
     }
 }
 
