--- a/src/app/modules/Assesment/user/user.component.scss
+++ b/src/app/modules/Assesment/user/user.component.scss
@@ -1,102 +1,87 @@
-:host{
-    margin: 0;
-   
+.container{
+    border: 5px solid red;
     display: flex;
     flex-grow: 1;
-   // padding: 100px;
-    background-color: #eaeef0;
-    font-size: 20px;
-    padding: 50px;
-    max-width: 100%;
-    box-sizing: border-box;
+    width: 100%;
    
 }
-.continer{
-       
-        display: flex;
-        flex-direction: column;
 
-        .top{
-            display: flex;
-             justify-content: space-between;
-             margin: 20px;
-             flex-direction: row;
-            }
-        .align-item{
-            display: flex;
-           flex-direction: row;
-         
+// .container{
+       
+//         // display: flex;
+//         // flex-direction: column;
+//         // width: 100%;
         
-          }
-          .openform{
-              display:  flex;
-              flex-wrap: nowrap;
-              flex-direction: row;
-            
-          }
+
+//         .main-header{
+//             display: flex;
+//             justify-content: space-between;
+//         }
+//         .side-content{
+//             display: flex;
+//         }
+           
+//         //   .openform{
+//         //    display: flex;
+//         //    flex-wrap: nowrap;
+//         //    width: 100%;
+//         //   }
+//         //   .div-form{
+//         //     display: flex;
+//         //     flex-wrap: wrap;
+//         //     justify-content: center3;
+//         //   }
         
-            //width: 100%;
+//         //     #myInput {
+//         //         background-position: 10px 12px;
+//         //         background-repeat: no-repeat;
+//         //         // width: 50px;
+//         //         font-size: 15px;
+//         //         // padding: 12px 20px 12px 40px;
+//         //         padding: 10px 10px;
+//         //         border: 1px solid #ddd;
+        
+//         //      }
+//         //      span{
+//         //          color: red;
+//         //      }
           
-            #myInput {
-                background-position: 10px 12px;
-                background-repeat: no-repeat;
-                // width: 50px;
-                font-size: 15px;
-                // padding: 12px 20px 12px 40px;
-                padding: 10px 10px;
-                border: 1px solid #ddd;
-        
-             }
-             .list{
-                 display: flex;
-                 flex-direction:row;
-                 
-             }
-             .space{
-                 display: flex;
-                 flex-wrap: wrap;
-                 flex-direction: row;
-                 
-             }
-             span{
-                 color: red;
-             }
             
-        }        
+//         }        
     
        
-        button{
-            border: none;
-            background-color:#507def;
-            color: black;
-            margin-left: 100px;
-            padding: 5px 10px;
-            font-weight: 600;
-            font-size: 15px;
-        }
+//         button{
+//             border: none;
+//             background-color:#507def;
+//             color: rgb(240, 239, 239);
+//             margin-left: 100px;
+//             padding: 5px 10px;
+//             font-weight: 600;
+//             font-size: 15px;
+//         }
 
     
-    .bx{
-        padding: 0 5px;
-        color: #2e2f36;
-        transform: scale(1.2,1.2);
-    }
+//     .bx{
+//         padding: 0 5px;
+//         color: #2e2f36;
+//         transform: scale(1.2,1.2);
+//     }
 
-    table,td,th{
-        border-collapse: collapse;
-        padding: 5px 20px;
-        border: 1px solid #0708411c;
-        text-align: center;
-        color: rgb(37, 12, 12);
-        cursor: pointer;
-    }
+//     table,td,th{
+//         border-collapse: collapse;
+//         padding: 5px 20px;
+//         border: 1px solid #0708411c;
+//         text-align: center;
+//         color: rgb(37, 12, 12);
+//         cursor: pointer;
+//     }
 
-    th{
-        background-color: #aeb3b8;
-        color: black;
-    }
+//     th{
+//         background-color: #aeb3b8;
+//         color: black;
+//     }
 
-    table{
-        width: 900px;
-        margin: 0 auto;
-    }
+//     table{
+//       width: 100%;
+//         margin: 0 auto;
+//     }
