--- a/src/app/modules/employee/components/employee-form/employee-form.component.scss
+++ b/src/app/modules/employee/components/employee-form/employee-form.component.scss
@@ -1,10 +1,10 @@
-:host{
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    background-color: #F5F7C0 ;
-    padding: 70px;
-}
+// :host{
+//     display: flex;
+//     flex-direction: column;
+//     flex-grow: 1;
+//     background-color: #F5F7C0 ;
+//     // padding: 70px;
+// }
 
 form{
     border: 3px solid #4482f5;
