--- a/src/app/modules/employee/components/employee-list/employee-list.component.html
+++ b/src/app/modules/employee/components/employee-list/employee-list.component.html
@@ -1,4 +1,4 @@
-<div class="continer">
+<div class="container">
 
     <div class="nav">
         <input type="text" id="myInput" placeholder="Search..." [(ngModel)]="search">
