--- a/src/app/modules/employee/components/employee-list/employee-list.component.scss
+++ b/src/app/modules/employee/components/employee-list/employee-list.component.scss
@@ -1,20 +1,12 @@
-:host{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    padding: 100px;
-    background-color: #eaeef0;
-    font-size: 20px;
 
-}
-.continer{
+.container{
 
-    box-sizing: border-box;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
+    // box-sizing: border-box;
+    // max-width: 100%;
+    // display: flex;
+    // flex-direction: column;
+    height: 100%;
+    border: 5px solid red;
 
     .nav{
         display: flex;
